--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>customs video player </title>
+    <title>Youtube</title>
     <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css' integrity='sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2' crossorigin='anonymous'>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -58,7 +58,7 @@
             <div class="card-content">
                 <div class="card-header">
                     <div class="row">
-                        <div class="col-3">
+                        <div class="col-3" style="background: #5640EE;" >
                             <button style="background: #5640EE;"class="btn btn-danger btn-sm upload_btn"> <i class="fa fa-upload"></i>
                                 Local</button>
                         </div>
