--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
             <div class="card-content">
                 <div class="card-header">
                     <div class="row">
-                        <div class="col-3" style="background: #5640EE;" >
-                            <button style="background: #5640EE;"class="btn btn-danger btn-sm upload_btn"> <i class="fa fa-upload"></i>
+                        <div class="col-3" >
+                            <button class="btn btn-danger btn-sm upload_btn"> <i class="fa fa-upload"></i>
                                 Local</button>
                         </div>
                         <div class="col-9 text-right">
